# emb-loop

./: MANIFEST.in  README.md  pyproject.toml
emb/: __main__.py  calib_nano_attiny202.py  compare.py  generate_nano_code.py  loop_nano_attiny202.py  path.py  serial_json.py
emb/backend/avr/: compile.py  flash.py  programmer.py  toolchain.py
emb/backend/nano/tester/: compile_tester.py  install_tester.py  interaction_builder.py  run_session.py
emb/backend/setup/: ubuntu.py
emb/boards/attiny202/: attiny202.yaml
emb/commands/: flash.py  setup.py
emb/examples/attiny202/: blink.c
emb/host_mcu/: avr_fcpu_calib.json  build_arduino_cli.py  code_utility.py  compile_flash.py  logger.py
emb/host_mcu/host_mcu_codes/nano/calib/: calib.ino
emb/host_mcu/host_mcu_codes/nano/tester/: config.h  event.h  event_formatter.cpp  event_formatter.h  generated_config.h  logger.cpp  logger.h  pin_monitor.cpp  pin_monitor.h  ring_buffer.cpp  (+5 more)
emb/logs/: ai_feedback.json  latest.json  result.json
emb/requests/: test_request.json
emb/sources/attiny202/: blink_test.c  blink_test3.c
emb/sources/nano/: logger.c  logger.h  main.c  tester.c  tester_logger_nano.c
emb/target_mcu/attiny202/codes/: blink.c  test_202.c
emb/target_mcu/attiny202/codes_compiled/: attiny202.elf  attiny202.hex
logs/attiny202/: 2026-07-13_03-46-49.txt  2026-07-14_05-54-20.txt  2026-07-14_06-00-10.txt  2026-07-14_06-07-35.txt  2026-07-14_06-07-43.json  2026-07-14_06-14-20.txt  2026-07-14_06-14-32.json  2026-07-14_06-23-44.txt  2026-07-14_06-29-01.json  2026-07-14_06-35-43.txt  2026-07-14_06-35-56.json
